--- a/slyle.css
+++ b/slyle.css
@@ -1,11 +1,44 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: grey;
+    background-color: rgba(10, 50, 16, 0.1);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: center;
+    font-size: 20px;
 }
 
-#TITLE {
+#title {
     color: green;
+}
+
+#description {
+    text-align: center;
+}
+
+.form-group{
+    background-color: rgba(10, 50, 16, 0.4);
+    max-width: auto;
+    min-width: 30%;
+    height: auto;
+    border: 5px solid black;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-group:hover {
+    background-color: magenta;
+}
+
+#survey-form {
+    display: flex;
+    flex-wrap: wrap;
 }
 
