--- a/slyle.css
+++ b/slyle.css
@@ -1,14 +1,20 @@
-body {
+* {
     margin: 0;
     padding: 0;
-    background-color: rgba(10, 50, 16, 0.1);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100vw;
-    justify-content: center;
     font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
+body {
+    background-color: rgba(10, 50, 16, 0.1);
+    width: 100vw;
+}
+
+main {
+    margin: 0 auto;
+    width: 40%;
 }
 
 #title {
@@ -19,26 +25,28 @@ body {
     text-align: center;
 }
 
-.form-group{
+#number,
+#email,
+#name {
+    text-align: right;
+}
+
+.form-group {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr;
     background-color: rgba(10, 50, 16, 0.4);
-    max-width: auto;
-    min-width: 30%;
     height: auto;
     border: 5px solid black;
     border-radius: 10px;
     margin: 10px;
     padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+.form-group > div {
+    min-width: auto;
 }
 
 .form-group:hover {
     background-color: magenta;
 }
-
-#survey-form {
-    display: flex;
-    flex-wrap: wrap;
-}
-
